--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
     <head>
         <meta charset="UTF-8">
         <title>vyrvichfrontend.dev</title>
-        <link href="../CSS/Styles.css" rel="stylesheet" />
+        <link href="Styles.css" rel="stylesheet" />
     </head>
 <body> 
     <div class="container">
         <div class="info">
-            <img src="../Assets/logo.jpg" alt="avatar" class="avatar"> 
+            <img src="logo.jpg" alt="avatar" class="avatar"> 
             
             <div class="info-text">
                 <h1>Вырвич Михаил</h1>
